# bbtools-http

./: .gitignore  CMakeLists.txt  README.md  test  test.cc
bbt/http/: HttpClient.cc  HttpClient.hpp  HttpServer.cc  HttpServer.hpp  Request.cc  Request.hpp
bbt/http/detail/: Context.cc  Context.hpp  Define.hpp  Errcode.hpp  HttpParser.cc  HttpParser.hpp  ReqParser.hpp  RespParser.hpp
bbt/http/libevent/: HttpClient.cc  HttpClient.hpp  HttpServer.cc  HttpServer.hpp
example/: CMakeLists.txt  client.cc  parser.cc  request_get.cc  server.cc
shell/: clear.sh  install.sh  uninstall.sh
src/: HttpServer.hpp
src/detail/: Define.hpp  Errcode.hpp
src/engine/: Define.hpp  Errcode.hpp  IHttpClient.hpp  IHttpServer.hpp
src/libevent/: HttpClient.cc  HttpClient.hpp  HttpServer.cc  HttpServer.hpp
test/: CMakeLists.txt  http_client.cc  http_server.cc
